# cyperf-mcp

./: .gitignore  README.md  config.example.json  pyproject.toml
comparative-studies/scripts/: common.py  test_ai_prompt_injection.py  test_enterprise_mix.py  test_office365_outlook.py  test_tls_throughput.py
docs/: future-tool-reductions.md  test-playbook.md  tools.md
scripts/: test_ddos_dns_flood.py  test_llm_api_stress.py  test_office365_onedrive.py  test_waf_validation.py
src/cyperf_mcp/: client.py  config.py  cyperf_mcp_server.py  helpers.py
src/cyperf_mcp/tools/: __init__.py  agents.py  brokers.py  certificates.py  configs.py  controllers.py  diagnostics.py  licensing.py  migration.py  notifications.py  resources.py  results.py  sessions.py  statistics.py  system.py  test_ops.py
