[project]
name = "cyperf-mcp"
version = "7.0.6"
description = "MCP server for Keysight CyPerf network testing platform"
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-Proprietary"
authors = [
    { name = "Partha Majumdar", email = "partha.majumdar@keysight.com" },
    { name = "Keysight Technologies" },
]
keywords = ["mcp", "cyperf", "keysight", "network-testing", "performance-testing", "security-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "cyperf>=6.0.2",
]

[project.urls]
Homepage = "https://github.com/Keysight/cyperf-mcp"
Repository = "https://github.com/Keysight/cyperf-mcp"
Issues = "https://github.com/Keysight/cyperf-mcp/issues"

[project.scripts]
cyperf-mcp = "cyperf_mcp.cyperf_mcp_server:main"

[tool.hatch.build.targets.sdist]
exclude = [
    ".mcptrial/",
    ".mcpenv/",
    ".claude/",
    "CLAUDE.md",
    "comparative-studies/",
    "docs/",
    "dist/",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
